ros_inorbit_samples: 0.3.1-1 in 'noetic/distribution.yaml' [bloom]

--- a/noetic/distribution.yaml
+++ b/noetic/distribution.yaml
@@ -9746,13 +9746,17 @@ repositories:
       version: master
     status: developed
   ros_inorbit_samples:
+    doc:
+      type: git
+      url: https://github.com/inorbit-ai/ros_inorbit_samples.git
+      version: noetic-devel
     release:
       packages:
       - inorbit_republisher
       tags:
         release: release/noetic/{package}/{version}
       url: https://github.com/inorbit-ai/ros_inorbit_samples-release.git
-      version: 0.3.0-1
+      version: 0.3.1-1
     source:
       type: git
       url: https://github.com/inorbit-ai/ros_inorbit_samples.git
