--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2236,6 +2236,7 @@ repositories:
     source:
       type: git
       url: https://github.com/Ikerlan-KER/extrinsic_calibrator.git
+      version: humble
     status: maintained
   fadecandy_ros:
     doc:
