--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4053,6 +4053,12 @@ repositories:
       url: https://github.com/nerian-vision/nerian_stereo_ros2.git
       version: default
     status: developed
+  netft_utils:
+    source:
+      type: git
+      url: https://github.com/UTNuclearRoboticsPublic/netft_utils.git
+      version: iron
+    status: maintained
   nlohmann_json_schema_validator_vendor:
     doc:
       type: git
