--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -144,6 +144,7 @@ asio:
   arch: [asio]
   debian: [libasio-dev]
   fedora: [asio-devel]
+  freebsd: [asio]
   gentoo: [dev-cpp/asio]
   nixos: [asio]
   openembedded: [asio@meta-oe]
@@ -325,6 +326,7 @@ benchmark:
     '*': [libbenchmark-dev]
     stretch: null
   fedora: [google-benchmark-devel]
+  freebsd: [benchmark]
   gentoo: [dev-cpp/benchmark]
   nixos: [gbenchmark]
   openembedded: [google-benchmark@meta-ros2]
@@ -399,6 +401,7 @@ bullet:
   arch: [bullet]
   debian: [libbullet-dev]
   fedora: [bullet-devel]
+  freebsd: [bullet]
   gentoo: [sci-physics/bullet]
   macports: [bullet]
   nixos: [bullet]
@@ -558,6 +561,7 @@ clang-format:
   arch: [clang]
   debian: [clang-format]
   fedora: [clang-tools-extra, git-clang-format]
+  freebsd: [llvm]
   gentoo: [sys-devel/clang]
   nixos: [clang]
   opensuse: [clang]
@@ -573,6 +577,7 @@ clang-tidy:
   arch: [clang]
   debian: [clang-tidy]
   fedora: [clang-tools-extra]
+  freebsd: [llvm]
   gentoo: [sys-devel/clang]
   nixos: [clang]
   opensuse: [clang]
@@ -714,6 +719,7 @@ cppcheck:
   arch: [cppcheck]
   debian: [cppcheck]
   fedora: [cppcheck]
+  freebsd: [cppcheck]
   gentoo: [dev-util/cppcheck]
   nixos: [cppcheck]
   openembedded: [cppcheck@meta-ros-common]
@@ -1098,6 +1104,7 @@ file:
   arch: [file]
   debian: [file]
   fedora: [file]
+  freebsd: [file]
   gentoo: [sys-apps/file]
   nixos: [file]
   openembedded: [file@openembedded-core]
@@ -1579,7 +1586,7 @@ google-mock:
   arch: [gtest]
   debian: [google-mock]
   fedora: [gmock-devel]
-  freebsd: [googlemock]
+  freebsd: [googletest]
   gentoo: [dev-cpp/gtest]
   nixos: [gtest]
   openembedded: [gtest@meta-oe]
@@ -3650,6 +3657,7 @@ libfreetype-dev:
     '*': [libfreetype-dev]
     buster: [libfreetype6-dev]
   fedora: [freetype-devel]
+  freebsd: [freetype2]
   gentoo: [media-libs/freetype]
   nixos: [freetype]
   openembedded: [freetype@openembedded-core]
@@ -3663,6 +3671,7 @@ libfreetype6:
   arch: [freetype2]
   debian: [libfreetype6]
   fedora: [freetype]
+  freebsd: [freetype2]
   gentoo: [media-libs/freetype]
   nixos: [freetype]
   openembedded: [freetype@openembedded-core]
@@ -4427,6 +4436,7 @@ liblttng-ust-dev:
   arch: [lttng-ust]
   debian: [liblttng-ust-dev]
   fedora: [lttng-ust-devel]
+  freebsd: [lttng-ust]
   gentoo: [dev-util/lttng-ust]
   nixos: [lttng-ust]
   openembedded: [lttng-ust@openembedded-core]
@@ -4436,6 +4446,7 @@ liblz4:
   arch: [lz4]
   debian: [liblz4-1]
   fedora: [lz4-libs]
+  freebsd: [liblz4]
   nixos: [lz4]
   opensuse:
     '*': [liblz4]
@@ -4446,6 +4457,7 @@ liblz4-dev:
   arch: [lz4]
   debian: [liblz4-dev]
   fedora: [lz4-devel]
+  freebsd: [liblz4]
   nixos: [lz4]
   opensuse:
     '*': [liblz4-devel]
@@ -4625,6 +4637,7 @@ libncurses-dev:
   arch: [ncurses]
   debian: [libncurses-dev]
   fedora: [ncurses-devel]
+  freebsd: [ncurses]
   gentoo: [sys-libs/ncurses]
   macports: [ncurses]
   nixos: [ncurses]
@@ -4816,7 +4829,7 @@ libopencv-dev:
   arch: [opencv]
   debian: [libopencv-dev]
   fedora: [opencv-devel]
-  freebsd: [opencv-core]
+  freebsd: [opencv]
   gentoo: [media-libs/opencv]
   macports: [opencv]
   nixos: [opencv, opencv.cxxdev]
@@ -5823,6 +5836,7 @@ libqt5-svg:
   arch: [qt5-svg]
   debian: [libqt5svg5]
   fedora: [qt5-qtsvg]
+  freebsd: [qt5-svg]
   gentoo: ['dev-qt/qtsvg:5']
   nixos: [qt5.qtsvg]
   openembedded: [qtsvg@meta-qt5]
@@ -6106,6 +6120,7 @@ libsqlite3-dev:
   arch: [sqlite]
   debian: [libsqlite3-dev]
   fedora: [libsq3-devel]
+  freebsd: [sqlite3]
   gentoo: ['dev-db/sqlite:3']
   nixos: [sqlite]
   openembedded: [sqlite3@openembedded-core]
@@ -6580,6 +6595,7 @@ libx11-dev:
   arch: [libx11]
   debian: [libx11-dev]
   fedora: [libX11-devel]
+  freebsd: [libX11]
   gentoo: [x11-libs/libX11]
   nixos: [xorg.libX11]
   openembedded: [libx11@openembedded-core]
@@ -6700,6 +6716,7 @@ libxml2-utils:
   arch: [libxml2]
   debian: [libxml2-utils]
   fedora: [libxml2]
+  freebsd: [libxml2]
   gentoo: [dev-libs/libxml2]
   nixos: [libxml2]
   openembedded: [libxml2@openembedded-core]
@@ -6728,6 +6745,7 @@ libxrandr:
   arch: [libxrandr]
   debian: [libxrandr-dev]
   fedora: [libXrandr-devel]
+  freebsd: [libXrandr]
   gentoo: [x11-libs/libXrandr]
   macports: [xorg-libXrandr]
   nixos: [xorg.libXrandr]
@@ -6780,6 +6798,7 @@ libyaml:
   arch: [libyaml]
   debian: [libyaml-0-2]
   fedora: [libyaml]
+  freebsd: [libyaml]
   gentoo: [dev-libs/libyaml]
   nixos: [libyaml]
   openembedded: [libyaml@openembedded-core]
@@ -6791,6 +6810,7 @@ libyaml-dev:
   arch: [libyaml]
   debian: [libyaml-dev]
   fedora: [libyaml-devel]
+  freebsd: [libyaml]
   gentoo: [dev-libs/libyaml]
   nixos: [libyaml]
   openembedded: [libyaml@openembedded-core]
@@ -6831,6 +6851,7 @@ libzstd-dev:
   arch: [zstd]
   debian: [libzstd-dev]
   fedora: [libzstd-devel]
+  freebsd: [zstd]
   gentoo: [app-arch/zstd]
   nixos: [zstd]
   openembedded: [zstd@meta-oe]
@@ -7515,6 +7536,7 @@ openssl:
   arch: [openssl]
   debian: [openssl]
   fedora: [openssl]
+  freebsd: [openssl]
   gentoo: [dev-libs/openssl]
   nixos: [openssl]
   openembedded: [openssl@openembedded-core]
@@ -7831,6 +7853,7 @@ pybind11-dev:
   arch: [pybind11]
   debian: [pybind11-dev]
   fedora: [pybind11-devel]
+  freebsd: [pybind11]
   gentoo: [dev-python/pybind11]
   nixos: [pythonPackages.pybind11]
   openembedded: [python3-pybind11@meta-python]
@@ -8005,7 +8028,7 @@ qt5-qmake:
   arch: [qt5-base]
   debian: [qt5-qmake]
   fedora: [qt5-qtbase-devel]
-  freebsd: [qt5-qmake]
+  freebsd: [qt5-buildtools, qt5-qmake]
   gentoo: ['dev-qt/qtcore:5']
   nixos: [qt5.qtbase]
   openembedded: [qtbase@meta-qt5]
@@ -8453,6 +8476,7 @@ spdlog:
   arch: [spdlog]
   debian: [libspdlog-dev]
   fedora: [spdlog-devel]
+  freebsd: [spdlog]
   gentoo: [dev-libs/spdlog]
   nixos: [spdlog]
   openembedded: [spdlog@meta-oe]
@@ -8899,6 +8923,7 @@ uncrustify:
   arch: [uncrustify]
   debian: [uncrustify]
   fedora: [uncrustify]
+  freebsd: [uncrustify]
   gentoo: [dev-util/uncrustify]
   nixos: [uncrustify]
   openembedded: [uncrustify@meta-ros-common]
@@ -9291,6 +9316,7 @@ yaml:
   arch: [libyaml]
   debian: [libyaml-dev]
   fedora: [libyaml]
+  freebsd: [libyaml]
   gentoo: [dev-libs/libyaml]
   macports: [libyaml]
   nixos: [libyaml]
