--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2935,6 +2935,11 @@ repositories:
       type: git
       url: https://github.com/ajtudela/laser_segmentation.git
       version: main
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/laser_segmentation-release.git
+      version: 3.0.2-1
     source:
       type: git
       url: https://github.com/ajtudela/laser_segmentation.git
