--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3677,6 +3677,16 @@ repositories:
       url: https://github.com/kobuki-base/kobuki_velocity_smoother.git
       version: release/0.15.x
     status: maintained
+  kompass:
+    doc:
+      type: git
+      url: https://github.com/automatika-robotics/kompass.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/automatika-robotics/kompass.git
+      version: main
+    status: developed
   kuka_drivers:
     doc:
       type: git
@@ -9810,16 +9820,6 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/stubborn_buddies.git
-      version: main
-    status: developed
-  sugar:
-    doc:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
-      version: main
-    source:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
       version: main
     status: developed
   swri_console:
