--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -2712,6 +2712,16 @@ repositories:
       url: https://github.com/kobuki-base/kobuki_velocity_smoother.git
       version: release/0.15.x
     status: maintained
+  kompass:
+    doc:
+      type: git
+      url: https://github.com/automatika-robotics/kompass.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/automatika-robotics/kompass.git
+      version: main
+    status: developed
   lanelet2:
     doc:
       type: git
@@ -7822,16 +7832,6 @@ repositories:
       url: https://github.com/ros-industrial/stomp.git
       version: main
     status: maintained
-  sugar:
-    doc:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
-      version: main
-    source:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
-      version: main
-    status: developed
   swri_console:
     doc:
       type: git
