Fix jupyter-notebook for nixos
The nixpkgs "jupyter" package is a kind of meta-package designed for                                                                                                                                                                          interactive use. It causes problems with used as a dependency alongside other
Python packages. Instead, depend on the "notebook" package, which matches what
is done for the other distros.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -271,7 +271,7 @@ jupyter-notebook:
   debian:
     '*': [jupyter-notebook]
   fedora: [python3-notebook]
-  nixos: [jupyter]
+  nixos: [python3Packages.notebook]
   ubuntu:
     '*': [jupyter-notebook]
 libgv-python:
