--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -11380,6 +11380,12 @@ repositories:
       url: https://github.com/ros2/yaml_cpp_vendor.git
       version: humble
     status: maintained
+  yasmin:
+    source:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
+    status: developed
   zbar_ros:
     doc:
       type: git
