--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -8947,6 +8947,12 @@ repositories:
       url: https://github.com/ros2/yaml_cpp_vendor.git
       version: iron
     status: maintained
+  yasmin:
+    source:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
+    status: developed
   zbar_ros:
     doc:
       type: git
