--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -9468,6 +9468,12 @@ repositories:
       url: https://github.com/ros2/yaml_cpp_vendor.git
       version: jazzy
     status: maintained
+  yasmin:
+    source:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
+    status: developed
   zbar_ros:
     doc:
       type: git
