--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -8765,6 +8765,12 @@ repositories:
       url: https://github.com/ros2/yaml_cpp_vendor.git
       version: rolling
     status: maintained
+  yasmin:
+    source:
+      type: git
+      url: https://github.com/uleroboticsgroup/yasmin.git
+      version: main
+    status: developed
   zbar_ros:
     doc:
       type: git
