--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -366,6 +366,7 @@ pydocstyle:
   arch: [python-pydocstyle]
   debian: [pydocstyle]
   fedora: [python3-pydocstyle]
+  freebsd: [devel/py-pydocstyle]
   gentoo: [dev-python/pydocstyle]
   nixos: [python3Packages.pydocstyle]
   openembedded: ['${PYTHON_PN}-pydocstyle@meta-ros-common']
@@ -394,6 +395,7 @@ pyflakes3:
   arch: [python-pyflakes]
   debian: [pyflakes3]
   fedora: [python3-pyflakes]
+  freebsd: [devel/py-pyflakes]
   gentoo: [dev-python/pyflakes]
   nixos: [python3Packages.pyflakes]
   openembedded: ['${PYTHON_PN}-pyflakes@meta-ros-common']
@@ -4717,6 +4719,7 @@ python3:
   arch: [python]
   debian: [python3-dev]
   fedora: [python3-devel]
+  freebsd: [python3]
   gentoo: [dev-lang/python]
   nixos: [python3]
   openembedded: [python3@openembedded-core]
@@ -4917,7 +4920,7 @@ python3-argcomplete:
   arch: [python-argcomplete]
   debian: [python3-argcomplete]
   fedora: [python3-argcomplete]
-  freebsd: [py37-argcomplete]
+  freebsd: [devel/py-argcomplete]
   gentoo: [dev-python/argcomplete]
   nixos: [python3Packages.argcomplete]
   openembedded: [python3-argcomplete@meta-python]
@@ -5157,7 +5160,7 @@ python3-cairo:
   arch: [python-cairo]
   debian: [python3-cairo]
   fedora: [python3-cairo]
-  freebsd: [py3-cairo]
+  freebsd: [graphics/py-cairo]
   gentoo: [dev-python/pycairo]
   nixos: [python3Packages.pycairo]
   openembedded: [python3-pycairo@openembedded-core]
@@ -5442,6 +5445,7 @@ python3-cryptography:
   arch: [python-cryptography]
   debian: [python3-cryptography]
   fedora: [python3-cryptography]
+  freebsd: [security/py-cryptography]
   gentoo: [dev-python/cryptography]
   nixos: [python3Packages.cryptography]
   openembedded: [python3-cryptography@meta-python]
@@ -5732,6 +5736,7 @@ python3-empy:
   arch: [python-empy]
   debian: [python3-empy]
   fedora: [python3-empy]
+  freebsd: [textproc/py-empy]
   gentoo: [dev-python/empy]
   nixos: [python3Packages.empy]
   openembedded: [python3-empy@meta-ros-common]
@@ -5833,6 +5838,7 @@ python3-fasteners-pip:
 python3-fastjsonschema:
   debian: [python3-fastjsonschema]
   fedora: [python3-fastjsonschema]
+  freebsd: [devel/py-fastjsonschema]
   rhel:
     '*': [python3-fastjsonschema]
     '8': null
@@ -5901,6 +5907,7 @@ python3-flake8:
   arch: [flake8]
   debian: [python3-flake8]
   fedora: [python3-flake8]
+  freebsd: [devel/py-flake8]
   gentoo: [dev-python/flake8]
   nixos: [python3Packages.flake8]
   openembedded: [python3-flake8@meta-ros-common]
@@ -5956,6 +5963,7 @@ python3-flake8-builtins:
       pip:
         packages: [flake8-builtins]
   fedora: [python3-flake8-builtins]
+  freebsd: [devel/py-flake8-builtins]
   nixos: []
   openembedded: [python3-flake8-builtins@meta-ros-common]
   opensuse: [python3-flake8-builtins]
@@ -6000,6 +6008,7 @@ python3-flake8-comprehensions:
       pip:
         packages: [flake8-comprehensions]
   fedora: [python3-flake8-comprehensions]
+  freebsd: [devel/py-flake8-comprehensions]
   nixos: []
   openembedded: [python3-flake8-comprehensions@meta-ros-common]
   rhel:
@@ -6040,6 +6049,7 @@ python3-flake8-docstrings:
   arch: [python-flake8-docstrings]
   debian: [python3-flake8-docstrings]
   fedora: [python3-flake8-docstrings]
+  freebsd: [devel/py-flake8-docstrings]
   nixos: [python3Packages.flake8-docstrings]
   openembedded: [python3-flake8-docstrings@meta-ros-common]
   opensuse: [python3-flake8-docstrings]
@@ -6058,6 +6068,7 @@ python3-flake8-import-order:
       pip:
         packages: [flake8-import-order]
   fedora: [python3-flake8-import-order]
+  freebsd: [devel/py-flake8-import-order]
   nixos: [python3Packages.flake8-import-order]
   openembedded: [python3-flake8-import-order@meta-ros-common]
   opensuse: [python3-flake8-import-order]
@@ -6096,6 +6107,7 @@ python3-flake8-quotes:
   fedora:
     '*': [python3-flake8-quotes]
     '35': null
+  freebsd: [devel/py-flake8-quotes]
   nixos: []
   openembedded: [python3-flake8-quotes@meta-ros-common]
   opensuse: [python3-flake8-quotes]
@@ -6621,6 +6633,7 @@ python3-importlib-metadata:
       pip:
         packages: [importlib-metadata]
   fedora: [python3]
+  freebsd: [python3]
   gentoo: [dev-python/importlib-metadata]
   nixos: [python3Packages.importlib-metadata]
   openembedded: [python3-importlib-metadata@openembedded-core]
@@ -6647,6 +6660,7 @@ python3-importlib-resources:
       pip:
         packages: [importlib-resources]
   fedora: [python3]
+  freebsd: [python3]
   gentoo: [dev-lang/python]
   nixos: [python3Packages.importlib-resources]
   openembedded: [python3@openembedded-core]
@@ -6866,6 +6880,7 @@ python3-lark-parser:
     buster: [python3-lark-parser]
     stretch: [python3-lark-parser]
   fedora: [python3-lark-parser]
+  freebsd: [devel/py-lark]
   gentoo: [dev-python/lark]
   nixos: [python3Packages.lark]
   openembedded: [python3-lark-parser@meta-ros-common]
@@ -6962,7 +6977,7 @@ python3-lxml:
   arch: [python-lxml]
   debian: [python3-lxml]
   fedora: [python3-lxml]
-  freebsd: [py36-lxml]
+  freebsd: [devel/py-lxml]
   gentoo: [dev-python/lxml]
   nixos: [python3Packages.lxml]
   openembedded: [python3-lxml@meta-python]
@@ -7035,6 +7050,7 @@ python3-matplotlib:
   arch: [python-matplotlib]
   debian: [python3-matplotlib]
   fedora: [python3-matplotlib]
+  freebsd: [math/py-matplotlib]
   gentoo: [dev-python/matplotlib]
   nixos: [python3Packages.matplotlib]
   openembedded: [python3-matplotlib@meta-python]
@@ -7291,6 +7307,7 @@ python3-mypy:
     '*': [python3-mypy]
     stretch: [mypy]
   fedora: [python3-mypy]
+  freebsd: [devel/py-mypy]
   gentoo: [dev-python/mypy]
   nixos: [python3Packages.mypy]
   openembedded: [python3-mypy@meta-ros-common]
@@ -7457,6 +7474,7 @@ python3-numpy:
   arch: [python-numpy]
   debian: [python3-numpy]
   fedora: [python3-numpy]
+  freebsd: [math/py-numpy]
   gentoo: [dev-python/numpy]
   nixos: [python3Packages.numpy]
   openembedded: [python3-numpy@openembedded-core]
@@ -7720,6 +7738,7 @@ python3-packaging:
   arch: [python-packaging]
   debian: [python3-packaging]
   fedora: [python3-packaging]
+  freebsd: [devel/py-packaging]
   gentoo: [dev-python/packaging]
   nixos: [python3Packages.packaging]
   openembedded: [python3-packaging@openembedded-core]
@@ -7859,7 +7878,7 @@ python3-pil:
   arch: [python-pillow]
   debian: [python3-pil]
   fedora: [python3-pillow, python3-pillow-qt]
-  freebsd: [py3-pillow]
+  freebsd: [graphics/py-pillow]
   gentoo: [dev-python/pillow]
   nixos: [python3Packages.pillow]
   openembedded: [python3-pillow@meta-python]
@@ -8033,6 +8052,7 @@ python3-psutil:
   arch: [python-psutil]
   debian: [python3-psutil]
   fedora: [python3-psutil]
+  freebsd: [sysutils/py-psutil]
   gentoo: [dev-python/psutil]
   macports: [py36-psutil]
   nixos: [python3Packages.psutil]
@@ -8115,6 +8135,7 @@ python3-pycodestyle:
   arch: [python-pycodestyle]
   debian: [python3-pycodestyle]
   fedora: [python3-pycodestyle]
+  freebsd: [devel/py-pycodestyle]
   gentoo: [dev-python/pycodestyle]
   nixos: [python3Packages.pycodestyle]
   openembedded: [python3-pycodestyle@meta-python]
@@ -8169,6 +8190,7 @@ python3-pydot:
   arch: [python-pydot]
   debian: [python3-pydot]
   fedora: [python3-pydot]
+  freebsd: [graphics/py-pydot]
   gentoo: [dev-python/pydot]
   nixos: [python3Packages.pydot]
   openembedded: [python3-pydot@meta-ros-common]
@@ -8247,7 +8269,7 @@ python3-pygraphviz:
   alpine: [py3-pygraphviz]
   debian: [python3-pygraphviz]
   fedora: [python3-pygraphviz]
-  freebsd: [py-pygraphviz]
+  freebsd: [graphics/py-pygraphviz]
   gentoo: [dev-python/pygraphviz]
   nixos: [python3Packages.pygraphviz]
   openembedded: [python3-pygraphviz@meta-ros-common]
@@ -8774,6 +8796,7 @@ python3-pytest:
   arch: [python-pytest]
   debian: [python3-pytest]
   fedora: [python3-pytest]
+  freebsd: [devel/py-pytest]
   gentoo: [dev-python/pytest]
   nixos: [pythonPackages.pytest]
   openembedded: [python3-pytest@meta-python]
@@ -8813,6 +8836,7 @@ python3-pytest-cov:
   arch: [python-pytest-cov]
   debian: [python3-pytest-cov]
   fedora: [python3-pytest-cov]
+  freebsd: [devel/py-pytest-cov]
   gentoo: [dev-python/pytest-cov]
   nixos: [python3Packages.pytestcov]
   openembedded: [python3-pytest-cov@meta-ros-common]
@@ -8823,6 +8847,7 @@ python3-pytest-mock:
   arch: [python-pytest-mock]
   debian: [python3-pytest-mock]
   fedora: [python3-pytest-mock]
+  freebsd: [devel/py-pytest-mock]
   gentoo: [dev-python/pytest-mock]
   nixos: [python3Packages.pytest-mock]
   openembedded: [python3-pytest-mock@meta-ros-common]
@@ -8866,6 +8891,7 @@ python3-pytest-timeout:
   arch: [python-pytest-timeout]
   debian: [python3-pytest-timeout]
   fedora: [python3-pytest-timeout]
+  freebsd: [devel/py-pytest-timeout]
   gentoo: [dev-python/pytest-timeout]
   nixos: [python3Packages.pytest-timeout]
   openembedded: [python3-pytest-timeout@meta-python]
@@ -8962,6 +8988,7 @@ python3-qt5-bindings:
     '*': [libpyside2-dev, libshiboken2-dev, pyqt5-dev, python3-pyqt5, python3-pyqt5.qtsvg, python3-pyside2.qtsvg, python3-sip-dev, qtbase5-dev, shiboken2]
     stretch: [pyqt5-dev, python3-pyqt5, python3-pyqt5.qtsvg, python3-sip-dev, qtbase5-dev]
   fedora: [python3-qt5-devel, python3-sip-devel, libXext-devel]
+  freebsd: [devel/pyside2, devel/shiboken2]
   gentoo: [dev-python/PyQt5]
   nixos: [python3Packages.pyqt5]
   openembedded: [python3-pyqt5@meta-qt5]
@@ -9459,6 +9486,7 @@ python3-setuptools:
   arch: [python-setuptools]
   debian: [python3-setuptools]
   fedora: [python3-setuptools]
+  freebsd: [devel/py-setuptools]
   gentoo: [dev-python/setuptools]
   nixos: [python3Packages.setuptools]
   openembedded: [python3-setuptools@openembedded-core]
@@ -10195,6 +10223,7 @@ python3-typing-extensions:
   arch: [python-typing_extensions]
   debian: [python3-typing-extensions]
   fedora: [python3-typing-extensions]
+  freebsd: [devel/py-typing-extensions]
   gentoo: [dev-python/typing-extensions]
   opensuse: [python3-typing_extensions]
   rhel:
@@ -10520,6 +10549,7 @@ python3-yaml:
   arch: [python-yaml]
   debian: [python3-yaml]
   fedora: [python3-PyYAML]
+  freebsd: [devel/py-pyyaml]
   gentoo: [dev-python/pyyaml]
   nixos: [python3Packages.pyyaml]
   openembedded: [python3-pyyaml@meta-python]
