--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -99,6 +99,10 @@ eigen:
     homebrew:
       depends: [gfortran]
       packages: [eigen]
+fcl:
+  osx:
+    homebrew:
+      packages: [dartsim/dart/fcl]
 ffmpeg:
   osx:
     homebrew:
