renamed fcl to libfcl

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1049,19 +1049,6 @@ fcgi:
   fedora: [fcgi, mod_fcgid, spawn-fcgi]
   gentoo: [dev-ruby/fcgi]
   ubuntu: [libfcgi-dev, libapache2-mod-fastcgi, spawn-fcgi]
-fcl:
-  debian:
-    '*': [libfcl0.7]
-    bullseye: [libfcl0.6]
-    buster: [libfcl0.5]
-  fedora: [fcl]
-  gentoo: [sci-libs/fcl]
-  nixos: [fcl]
-  openembedded: [fcl@meta-ros-common]
-  rhel: [fcl]
-  ubuntu:
-    '*': [libfcl0.7]
-    focal: [libfcl0.5]
 festival:
   arch: [festival, festival-english]
   debian: [festival, festvox-kallpc16k]
@@ -3585,6 +3572,19 @@ libext2fs-dev:
   opensuse: [libext2fs-devel]
   rhel: [e2fsprogs-devel]
   ubuntu: [libext2fs-dev]
+libfcl:
+  debian:
+    '*': [libfcl0.7]
+    bullseye: [libfcl0.6]
+    buster: [libfcl0.5]
+  fedora: [fcl]
+  gentoo: [sci-libs/fcl]
+  nixos: [fcl]
+  openembedded: [fcl@meta-ros-common]
+  rhel: [fcl]
+  ubuntu:
+    '*': [libfcl0.7]
+    focal: [libfcl0.5]
 libfcl-dev:
   debian: [libfcl-dev]
   fedora: [fcl-devel]
