--- a/rosdep/osx-homebrew.yaml
+++ b/rosdep/osx-homebrew.yaml
@@ -99,10 +99,6 @@ eigen:
     homebrew:
       depends: [gfortran]
       packages: [eigen]
-fcl:
-  osx:
-    homebrew:
-      packages: [dartsim/dart/fcl]
 ffmpeg:
   osx:
     homebrew:
@@ -215,6 +211,10 @@ libedit-dev:
   osx:
     homebrew:
       packages: [libedit]
+libfcl:
+  osx:
+    homebrew:
+      packages: [dartsim/dart/fcl]
 libfcl-dev:
   osx:
     homebrew:
