Add alpine/rhel source for psmisc
As suggested by Github Action warning here https://github.com/ros/rosdistro/actions/runs/11812065780/job/33061825360#logs

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -7804,6 +7804,7 @@ ps-engine:
   fedora: [openni-primesense]
   ubuntu: [ps-engine]
 psmisc:
+  alpine: [psmisc]
   arch: [psmisc]
   debian: [psmisc]
   fedora: [psmisc]
@@ -7812,6 +7813,7 @@ psmisc:
   nixos: [psmisc]
   openembedded: [psmisc@openembedded-core]
   opensuse: [psmisc]
+  rhel: [psmisc]
   ubuntu: [psmisc]
 pstoedit:
   arch: [pstoedit]
