Change to a system package key instead of a pip key
Signed-off-by: Barry Xu <barry.xu@sony.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -10253,19 +10253,10 @@ python3-uvloop:
   nixos: [python3Packages.uvloop]
   openembedded: [python3-uvloop@meta-ros2]
   ubuntu: [python3-uvloop]
-python3-validators-pip:
-  debian:
-    pip:
-      packages: [validotors]
-  fedora:
-    pip:
-      packages: [validotors]
-  rhel:
-    pip:
-      packages: [validotors]
-  ubuntu:
-    pip:
-      packages: [validotors]
+python3-validators:
+  debian: [python3-validators]
+  fedora: [python3-validators]
+  ubuntu: [python3-validators]
 python3-vcstool:
   alpine: [vcstool]
   debian: [python3-vcstool]
