Update configuration for different ubuntu version
Signed-off-by: Barry Xu <barry.xu@sony.com>

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -10256,7 +10256,14 @@ python3-uvloop:
 python3-validators:
   debian: [python3-validators]
   fedora: [python3-validators]
-  ubuntu: [python3-validators]
+  ubuntu:
+    '*': [python3-validators]
+    bionic:
+      pip:
+        packages: [validators]
+    focal:
+      pip:
+        packages: [validators]
 python3-vcstool:
   alpine: [vcstool]
   debian: [python3-vcstool]
