Fix CI errors for python3-fabric

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -5801,13 +5801,13 @@ python3-fabric:
     pip:
       packages: [fabric]
   nixos: [Fabric]
-  opensuse: [python-fabric]
+  opensuse: [python-Fabric]
   osx: [fabric]
   rhel:
     '*': [python3-fabric]
     '8':
       pip:
-        packages: [fabric]    
+        packages: [fabric]
   ubuntu: [python3-fabric]
 python3-falcon:
   arch: [python-falcon]
