--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -10256,6 +10256,7 @@ python3-uvloop:
 python3-validators:
   debian: [python3-validators]
   fedora: [python3-validators]
+  opensuse: [python3-validators]
   ubuntu:
     '*': [python3-validators]
     bionic:
