--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -3208,10 +3208,10 @@ repositories:
       url: https://github.com/adityapande-1995/linux_isolate_process.git
       version: main
     status: maintained
-  load_balancing_service:
+  service_load_balancing:
     source:
       type: git
-      url: https://github.com/Barry-Xu-2018/ros2_load_balancing_service.git
+      url: https://github.com/Barry-Xu-2018/ros2_service_load_balancing.git
       version: main
     status: developed
   log_view:
